[package]
name = "win32-display-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.12"
wmi = "0.14"
serde = { version = "1.0.217", features = ["derive"] }

[dependencies.windows]
# this will be kept in sync with the version used in komorebi
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
]
